# Scalar-Hackathon-1

./: .dockerignore  .env.enterprise  Dockerfile  README.md  RELEASE.md  app.py  docker-compose.yml  inference.py  openenv.yaml  pyproject.toml  requirements.txt  send_mail_simulation.py  test_dynamic.py  test_static.py  users.json
frontend/: next.config.ts  package-lock.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/admin/stress/: page.tsx
frontend/src/app/inbound/: page.tsx
frontend/src/app/kb/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/security/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/support/: page.tsx
frontend/src/components/: Sidebar.tsx
openenv_support_triage_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: __init__.py  app.py  auth_manager.py
server/connectors/: mail_poller.py
support_triage_env/: __init__.py  client.py  graders.py  knowledge_base.py  models.py  tasks.py
support_triage_env/server/: __init__.py  app.py  engine.py  mailbox.py  stats_tracker.py  stress_test.py  support_environment.py
tests/: test_environment.py  test_graders.py
